public/stylesheets/style.css
@import url('https://fonts.googleapis.com/css2?family=Rock+3D&display=swap');
@font-face {
    font-family: "blowbrush";
    src: url("/font/blowbrush/blowbrush.ttf") format("truetype");
    font-weight: 400;
    font-style: normal;
}

.branding {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 15px 45px;
    box-sizing: border-box;
}

#brandingg{
    animation: bounceInLeft 1.7s;
}

.branding a {
    display: flex;
    align-items: center;
    gap: 7px;
    text-decoration: none;
}

#tech {
    color: rgb(22, 225, 110);
}

#Syndicate {
    color: white;
    transition: color 0.3s ease;
}

#tslogo{
    width: 60px;
    height: 60px;
    object-fit: contain;
}

.branding a:hover #Syndicate {
    color: rgb(22, 225, 110);
    transition: color 0.3s ease;
}

.qwertyuiop{
    background-color:  rgb(22, 22, 22);
    border-radius: 32px;
}

.asdfghjkl{
    font-family: "Rock 3D", system-ui;
    font-weight: 400;
    font-style: normal;
    color: white;
}

.hoodie{
    position: relative;
    top: 150;
}

#tswashere {
    font-family: blowbrush;

    animation: bounceInLeft 2.2s;

    letter-spacing: 7px;
    position: absolute;
    bottom: 20px;
    left: 44px;
    z-index: 100;
}

.masthaye{
    background: linear-gradient(to right, #16e16e, #ffffff);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
}

#nav {
    display: flex;
    gap: 40px;
}

#nav a {
    text-decoration: none;
    color: red;
    font-family: blowbrush;
    font-size: 2rem;
    transition: color 0.3s ease;
    letter-spacing: 3px;
}

#about{
    animation: bounceInDown 1.1s;
}

#shop{
    animation: bounceInDown 1.2s;
}

#about:hover {
    color: rgb(22, 225, 110);
}

#shop:hover {
    color: rgb(22, 225, 110);

}

